# cpp_project_template

./: .clang-format  .editorconfig  CMakeLists.txt  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cmake/: utils.cmake
include/myproject/: config.hpp.in  hello.hpp
src/app/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  hello.cpp
test/: CMakeLists.txt  hello_test.cpp
